[gd_scene load_steps=9 format=3 uid="uid://yhdud82o8og3"]

[ext_resource type="Script" uid="uid://d3lexuiqwpj4b" path="res://scenes/screens/view_ranking/view_ranking.gd" id="1_h4uqq"]
[ext_resource type="FontFile" uid="uid://djmj6mcpi6goq" path="res://assets/fonts/Roboto-Bold.ttf" id="2_hp6cf"]
[ext_resource type="PackedScene" uid="uid://drcmogv7v2qqm" path="res://scenes/widgets/background/background.tscn" id="2_rapus"]
[ext_resource type="FontFile" uid="uid://bll5g7hqu1vkt" path="res://assets/fonts/Roboto-Medium.ttf" id="2_y5s16"]
[ext_resource type="PackedScene" uid="uid://uyhifjhgey5" path="res://scenes/screens/view_ranking/item_entry.tscn" id="4_h4uqq"]
[ext_resource type="FontFile" uid="uid://bslo4xtedu75k" path="res://assets/fonts/Roboto-Regular.ttf" id="4_ij14u"]

[sub_resource type="LabelSettings" id="LabelSettings_7j7ft"]
font = ExtResource("2_hp6cf")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_hp6cf"]
font = ExtResource("4_ij14u")
font_size = 24

[node name="ViewRanking" type="Control" node_paths=PackedStringArray("name_lbl", "item_entries", "no_items_lbl")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h4uqq")
name_lbl = NodePath("MarginContainer/VBoxContainer/HBoxContainer/NameLbl")
item_entries = NodePath("MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/ItemEntries")
no_items_lbl = NodePath("MarginContainer/VBoxContainer/PanelContainer/MarginContainer/NoItemsLbl")

[node name="Background" parent="." instance=ExtResource("2_rapus")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LeftOptions" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftOptions"]
custom_minimum_size = Vector2(80, 48)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y5s16")
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="NameLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"
label_settings = SubResource("LabelSettings_7j7ft")
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="RightOptions" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 2

[node name="EditBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/RightOptions"]
custom_minimum_size = Vector2(80, 48)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_y5s16")
theme_override_font_sizes/font_size = 20
text = "Edit"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ItemEntries" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="ItemEntry" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/ItemEntries" instance=ExtResource("4_h4uqq")]
layout_mode = 2

[node name="NoItemsLbl" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "This ranking has no items yet"
label_settings = SubResource("LabelSettings_hp6cf")
horizontal_alignment = 1
autowrap_mode = 3

[node name="RankBtn" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 48)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_y5s16")
theme_override_font_sizes/font_size = 20
text = "Rank Items"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/LeftOptions/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/RightOptions/EditBtn" to="." method="_on_edit_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RankBtn" to="." method="_on_rank_btn_pressed"]
